Fix overflow

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -266,4 +266,9 @@ table.reflows.cell-label {
   table.reflows tr:nth-child(odd) {
         background-color: #F9F9F9;
   }
+
+}
+
+body {
+  overflow-x: hidden;
 }
